# reposix

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  404.html  AgenticEngineeringReference.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  HANDOVER.md  InitialReport.md  LICENSE-MIT  MORNING-BRIEF-v0.3.md  MORNING-BRIEF.md  PROJECT-STATUS.md  PUBLIC-LAUNCH-CHECKLIST.md  README.md  RELEASE-NOTES-v0.10.0.md  RELEASE-NOTES-v0.11.0-PREVIEW.md  SECURITY.md  badge.json  clippy.toml  codecov.yml  deny.toml  index.html  mkdocs.yml  release-plz.toml  requirements-bench.txt  sitemap.xml
.cargo/: config.toml
.claude/: settings.json
.gemini/: .gitignore
.githooks/: pre-commit  pre-push  test-pre-push.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.planning/: CATALOG.md  CLAUDE.md  CONSULT-DECISIONS.md  GOOD-TO-HAVES.md  HANDOVER-v0.12.1.md  MANAGER-HANDOVER.md  MILESTONES.md  MORNING-WALKTHROUGH-2026-04-25.md  ORCHESTRATION-REFERENCE.md  ORCHESTRATION.md  PRACTICES.md  PROGRESS.md  PROJECT-history.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  SECURITY-COVERAGE.md  SESSION-7-BRIEF.md  (+13 more)
crates/reposix-cache/: CHANGELOG.md  Cargo.toml
crates/reposix-cache/fixtures/: cache_schema.sql
crates/reposix-cache/src/: audit.rs  builder.rs  cache.rs  cli_compat.rs  db.rs  error.rs  gc.rs  lib.rs  meta.rs  mirror_refs.rs  path.rs  reconciliation.rs  sink.rs  sync_tag.rs
crates/reposix-cache/tests/: audit_is_append_only.rs  blobs_are_lazy.rs  bucket_tree.rs  cache_coherence.rs  compile_fail.rs  delta_sync.rs  egress_denied_logs.rs  gc.rs  github_project_slug_not_sanitized.rs  gix_api_smoke.rs  last_fetched_at.rs  materialize_one.rs  oid_drift_reconcile.rs  oid_map_returns_current_oid.rs  open_under_git_repo_env.rs  pagination_prune_safety.rs  partial_clone_serves.rs  read_blob_cached.rs  sync_tags.rs  token_cost.rs  tree_contains_all_issues.rs
crates/reposix-cache/tests/common/: mod.rs
crates/reposix-cache/tests/compile-fail/: tainted_blob_into_egress.rs  tainted_blob_into_egress.stderr  untainted_new_is_pub_crate.rs  untainted_new_is_pub_crate.stderr
crates/reposix-cli/: CHANGELOG.md  Cargo.toml
crates/reposix-cli/src/: attach.rs  binpath.rs  cache_db.rs  cost.rs  demo.rs  doctor.rs  errors.rs  explain.rs  gc.rs  history.rs  init.rs  lib.rs  list.rs  main.rs  mount.rs  refresh.rs  sim.rs  spaces.rs  sync.rs  tokens.rs  worktree_helpers.rs
crates/reposix-cli/tests/: agent_flow.rs  agent_flow_real.rs  attach.rs  cli.rs  cost.rs  doctor.rs  errors_teach_recovery.rs  explain.rs  gc.rs  history.rs  no_truncate.rs  refresh_integration.rs  sync.rs  tokens.rs
crates/reposix-confluence/: CHANGELOG.md  Cargo.toml
crates/reposix-confluence/src/: adf.rs  client.rs  lib.rs  translate.rs  types.rs
crates/reposix-confluence/tests/: auth_header.rs  contract.rs  roundtrip.rs
crates/reposix-core/: CHANGELOG.md  Cargo.toml
crates/reposix-core/examples/: show_audit_schema.rs
crates/reposix-core/fixtures/: audit.sql
crates/reposix-core/src/: audit.rs  backend.rs  codes.rs  errmsg.rs  error.rs  http.rs  issue.rs  lib.rs  path.rs  project.rs  record.rs  remote.rs  taint.rs
crates/reposix-core/src/backend/: sim.rs
crates/reposix-core/tests/: audit_schema.rs  compile_fail.rs  http_allowlist.rs
crates/reposix-core/tests/compile-fail/: http_client_inner_not_pub.rs  http_client_inner_not_pub.stderr  tainted_into_untainted.rs  tainted_into_untainted.stderr  untainted_new_is_not_pub.rs  untainted_new_is_not_pub.stderr
crates/reposix-fuse/: Cargo.toml
crates/reposix-fuse/src/: attachments.rs  comments.rs  fetch.rs  fs.rs  inode.rs  labels.rs  lib.rs  main.rs  tree.rs
crates/reposix-fuse/tests/: nested_layout.rs  readdir.rs  sim_death_no_hang.rs  write.rs
crates/reposix-github/: CHANGELOG.md  Cargo.toml
crates/reposix-github/src/: lib.rs
crates/reposix-github/tests/: auth_header.rs  contract.rs
crates/reposix-quality/: CHANGELOG.md  Cargo.toml
crates/reposix-quality/src/: catalog.rs  coverage.rs  hash.rs  lib.rs  main.rs
crates/reposix-quality/src/commands/: agent_ux.rs  doc_alignment.rs  mod.rs  run.rs
crates/reposix-quality/tests/: bind_agent_ux.rs  bind_shell_verifier.rs  bind_source_relocation.rs  bind_validation.rs  cli_smoke.rs  confirm_retire_envguard.rs  coverage.rs  hash_test_fn.rs  merge_shards.rs  waiver.rs  walk.rs
crates/reposix-remote/: CHANGELOG.md  Cargo.toml
crates/reposix-remote/src/: backend_dispatch.rs  bus_handler.rs  bus_url.rs  client.rs  diff.rs  fast_import.rs  lib.rs  main.rs  mirror_egress.rs  pktline.rs  precheck.rs  protocol.rs  stateless_connect.rs  write_loop.rs
crates/reposix-remote/tests/: attach_pattern_c_roundtrip_recovers.rs  bulk_delete_cap.rs  bus_capabilities.rs  bus_precheck_a.rs  bus_precheck_b.rs  bus_url.rs  bus_write_audit_completeness.rs  bus_write_happy.rs  bus_write_mirror_egress.rs  bus_write_mirror_fail.rs  bus_write_no_helper_retry.rs  bus_write_no_mirror_remote.rs  bus_write_post_precheck_409.rs  bus_write_sot_fail.rs  common.rs  deleted_record_ghost_oid_map_row_forces_false_partial_fail.rs  errors_teach_recovery.rs  exit_codes.rs  mirror_refs.rs  noop_push_server_field_drift.rs  partial_failure_recovery.rs  perf_l1.rs  protocol.rs  push_conflict.rs  second_push_no_commit.rs  stateless_connect.rs  stateless_connect_e2e.rs
crates/reposix-sim/: CHANGELOG.md  Cargo.toml
crates/reposix-sim/fixtures/: seed.json
crates/reposix-sim/src/: db.rs  error.rs  lib.rs  main.rs  seed.rs  state.rs
crates/reposix-sim/src/middleware/: audit.rs  mod.rs  rate_limit.rs
crates/reposix-sim/src/routes/: issues.rs  mod.rs  transitions.rs
crates/reposix-sim/tests/: api.rs
crates/reposix-swarm/: Cargo.toml
crates/reposix-swarm/src/: confluence_direct.rs  contention.rs  driver.rs  fuse_mode.rs  lib.rs  main.rs  metrics.rs  sim_direct.rs  workload.rs
crates/reposix-swarm/tests/: chaos_audit.rs  confluence_real_tenant.rs  contention_e2e.rs  mini_e2e.rs
research/v0.13.0-dvcs/poc/scratch/: Cargo.toml
research/v0.13.0-dvcs/poc/scratch/src/: main.rs
(+2165 files in other folders)
