[workspace]
resolver = "2"
members = [
    "crates/reposix-core",
    "crates/reposix-sim",
    "crates/reposix-remote",
    "crates/reposix-cli",
    "crates/reposix-github",
    "crates/reposix-jira",
    "crates/reposix-swarm",
    "crates/reposix-confluence",
    "crates/reposix-cache",
]

[workspace.metadata.dist]
# cargo-dist 0.31.0 — managed by axodotdev. See dist.json5 if you regenerate
# the templates with `dist init` later.
cargo-dist-version = "0.31.0"
ci = ["github"]
installers = ["shell", "powershell", "homebrew"]
tap = "reubenjohn/homebrew-reposix"
targets = [
    # Linux x86_64 musl ships first because it's the broadest single binary;
    # aarch64-unknown-linux-musl is held back to v0.11.1 — github runners
    # default to gnu cross-toolchain, the musl-aarch64 cross-link needs
    # `aarch64-linux-musl-gcc` set up explicitly. Track separately.
    "x86_64-unknown-linux-musl",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
allow-dirty = ["ci"]

[workspace.package]
version = "0.11.1"
edition = "2021"
rust-version = "1.82"
authors = ["Reuben John <reubenvjohn@gmail.com>", "reposix contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/reubenjohn/reposix"
homepage = "https://github.com/reubenjohn/reposix"
description = "Git-native partial-clone exposing REST APIs as POSIX files for autonomous agents"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web server / client
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Errors
anyhow = "1"
thiserror = "2"

libc = "0.2"

# Storage
rusqlite = { version = "0.39", features = ["bundled"] }

# gix 0.82 — pure-Rust git object writer for the reposix-cache crate.
# Pinned with `=` because gix is pre-1.0 (issue GitoxideLabs/gitoxide#470)
# and minor versions have broken method signatures in the past.
# See .planning/phases/31-.../31-RESEARCH.md §Pitfall 4.
gix = "=0.82.0"
# XDG cache dir resolution for the reposix-cache default path.
dirs = "6"

# Misc
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
governor = "0.10"  # rate limiting
pulldown-cmark = "0.13"
sha2 = "0.11"
hex = "0.4"

# Internal
reposix-core = { path = "crates/reposix-core" }

[workspace.dependencies.dev]

# Profile tuning
[profile.dev]
opt-level = 0
debug = 1
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

# Fast tests
[profile.test]
opt-level = 0
debug = 1
