[package]
name = "reposix-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "On-disk bare-repo cache built from REST responses; lazy blob materialization for git partial-clone."
readme = "../../README.md"
keywords = ["git", "cache", "agent", "rest", "partial-clone"]
categories = ["development-tools", "caching"]

[dependencies]
reposix-core = { path = "../reposix-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
gix = { workspace = true, features = ["tree-editor"] }
dirs = { workspace = true }

[dev-dependencies]
reposix-sim = { path = "../reposix-sim" }
tempfile = "3"
trybuild = "1"
tokio = { workspace = true, features = ["full", "test-util", "macros", "rt-multi-thread"] }
anyhow = { workspace = true }
rusqlite = { workspace = true }
wiremock = "0.6"
serde_json = { workspace = true }
# Phase 33 delta_sync integration test seeds the sim via real HTTP.
reqwest = { workspace = true }
