[package]
name = "reposix-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Top-level reposix CLI: orchestrates simulator, FUSE mount, and demo flows"

[[bin]]
name = "reposix"
path = "src/main.rs"

[dependencies]
reposix-core.workspace = true
reposix-sim = { path = "../reposix-sim" }
reposix-confluence = { path = "../reposix-confluence" }
reposix-github = { path = "../reposix-github" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
chrono.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
tempfile = "3"
# Safe wrappers for POSIX signals + process syscalls (SIGTERM to child,
# setsid). Keeps #![forbid(unsafe_code)] at crate root.
rustix = { version = "0.38", features = ["process"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
