[package]
name = "reposix-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "reposix CLI orchestrator: init, sim, list, refresh, spaces."
readme = "../../README.md"
keywords = ["cli", "agent", "git", "rest", "issue-tracker"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "reposix"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
reposix-core.workspace = true
reposix-cache = { path = "../reposix-cache", version = "0.13.0" }
reposix-sim = { path = "../reposix-sim", version = "0.13.0" }
reposix-confluence = { path = "../reposix-confluence", version = "0.13.0" }
reposix-github = { path = "../reposix-github", version = "0.13.0" }
reposix-jira = { path = "../reposix-jira", version = "0.13.0" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
chrono.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
tempfile = "3"
# Safe wrappers for POSIX signals + process syscalls (SIGTERM to child,
# setsid). Keeps #![forbid(unsafe_code)] at crate root.
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
