[package]
name = "reposix-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "reposix CLI orchestrator: init, sim, list, refresh, spaces."
readme = "../../README.md"
keywords = ["cli", "agent", "git", "rest", "issue-tracker"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "reposix"
path = "src/main.rs"

# The release pipeline (.github/workflows/release.yml) ships ONE combined
# archive per target — `reposix-v<version>-<target>.tar.gz` — that contains
# BOTH `reposix` and `git-remote-reposix` under a `reposix-v<version>-<target>/`
# directory. The archive stem uses the product name `reposix` (not the package
# name `reposix-cli`), so the default `{ name }-{ target }` template 404'd.
# bin-dir uses `{ bin }` so binstall picks this crate's binary out of the
# shared archive. Extension is hardcoded because assets are `.tar.gz`, which
# binstall's `{ archive-format }` renders as `tgz`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/reposix-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "reposix-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/reposix-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
reposix-core.workspace = true
reposix-cache = { path = "../reposix-cache", version = "0.13.0" }
reposix-sim = { path = "../reposix-sim", version = "0.13.0" }
reposix-confluence = { path = "../reposix-confluence", version = "0.13.0" }
reposix-github = { path = "../reposix-github", version = "0.13.0" }
reposix-jira = { path = "../reposix-jira", version = "0.13.0" }
# D91-03: reuse the git remote helper's URL→connector factory (with its
# OP-3 `.with_audit(…)` wiring) for `attach`/`sync --reconcile` real-backend
# dispatch instead of hand-rolling a third/fourth copy. Only the `[lib]`
# `backend_dispatch` module is consumed; the helper binary is not built for
# the CLI. New transitive prod dep pulled in for the CLI: `parking_lot`.
reposix-remote = { path = "../reposix-remote", version = "0.13.0" }
tokio.workspace = true
reqwest.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
chrono.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
tempfile = "3"
# Safe wrappers for POSIX signals + process syscalls (SIGTERM to child,
# setsid). Keeps #![forbid(unsafe_code)] at crate root.
rustix = { version = "1", features = ["process"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
