[package]
name = "reposix-confluence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Confluence Cloud BackendConnector implementation for reposix."
readme = "../../README.md"
keywords = ["confluence", "atlassian", "agent", "git", "rest"]
categories = ["api-bindings", "development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
reposix-core.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
url = { workspace = true }
pulldown-cmark = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reposix-sim = { path = "../reposix-sim" }
tempfile = "3"
