[package]
name = "reposix-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types for reposix: BackendConnector trait, Record/Project/RemoteSpec, Tainted<T>."
readme = "../../README.md"
keywords = ["agent", "git", "issue-tracker", "rest", "backend"]
categories = ["development-tools", "api-bindings"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
reqwest = { workspace = true }
rusqlite = { workspace = true }
url = { workspace = true }
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
trybuild = "1"
