[package]
name = "reposix-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FUSE daemon mapping reposix remotes to a POSIX directory tree"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reposix-fuse"
path = "src/main.rs"

[dependencies]
reposix-core.workspace = true
fuser.workspace = true
libc.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true }
