[package]
name = "reposix-fuse"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "FUSE daemon mapping reposix remotes to a POSIX directory tree"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reposix-fuse"
path = "src/main.rs"

[dependencies]
reposix-core.workspace = true
# Read-path backend selection: the binary constructs SimBackend (default) or
# GithubReadOnlyBackend based on the --backend flag. Phase 10.
reposix-github = { path = "../reposix-github" }
fuser.workspace = true
libc.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
# Safe wrappers for POSIX syscalls we'd otherwise need `unsafe` for
# (`libc::getuid`/`getgid` are `unsafe fn` in libc 0.2.x). Keeps
# `#![forbid(unsafe_code)]` intact at the crate root.
rustix = { version = "0.38", features = ["process"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { workspace = true }
