[package]
name = "reposix-github"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Read-only GitHub Issues adapter implementing the reposix-core IssueBackend trait"

[lib]
path = "src/lib.rs"

[dependencies]
reposix-core.workspace = true
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
reposix-sim = { path = "../reposix-sim" }
tempfile = "3"
rusqlite = { workspace = true }
