[package]
name = "reposix-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "git-remote-reposix binary: stateless-connect + export protocol helper for reposix backends."
readme = "../../README.md"
keywords = ["git", "remote-helper", "agent", "rest", "partial-clone"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "git-remote-reposix"
path = "src/main.rs"

[features]
# Gated integration tests that shell out to a real `git` binary.
# Requires git >= 2.27 (for protocol-v2 filter support). Off by default
# because the dev host's git is 2.25.1 and the tests assert behaviour
# under git clone --filter=blob:none.
integration-git = []

[dependencies]
reposix-core.workspace = true
reposix-cache = { path = "../reposix-cache" }
# Phase 36-followup (helper backend dispatch): the helper instantiates
# concrete backend connectors based on the remote URL's scheme, so it
# pulls every backend adapter crate. Pre-Phase-36 the helper hardcoded
# `SimBackend` and these deps were CLI-only.
reposix-github = { path = "../reposix-github" }
reposix-confluence = { path = "../reposix-confluence" }
reposix-jira = { path = "../reposix-jira" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
gix = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
tempfile = "3"
tokio = { workspace = true }
chrono = { workspace = true }
