[package]
name = "reposix-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "git-remote-reposix binary: stateless-connect + export protocol helper for reposix backends."
readme = "../../README.md"
keywords = ["git", "remote-helper", "agent", "rest", "partial-clone"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "git-remote-reposix"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[features]
# Gated integration tests that shell out to a real `git` binary.
# Requires git >= 2.27 (for protocol-v2 filter support). Off by default
# because the dev host's git is 2.25.1 and the tests assert behaviour
# under git clone --filter=blob:none.
integration-git = []

[dependencies]
reposix-core.workspace = true
reposix-cache = { path = "../reposix-cache", version = "0.11.2" }
# Phase 36-followup (helper backend dispatch): the helper instantiates
# concrete backend connectors based on the remote URL's scheme, so it
# pulls every backend adapter crate. Pre-Phase-36 the helper hardcoded
# `SimBackend` and these deps were CLI-only.
reposix-github = { path = "../reposix-github", version = "0.11.2" }
reposix-confluence = { path = "../reposix-confluence", version = "0.11.2" }
reposix-jira = { path = "../reposix-jira", version = "0.11.2" }
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
gix = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
tempfile = "3"
tokio = { workspace = true }
chrono = { workspace = true }
