[package]
name = "reposix-remote"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "git-remote-reposix binary: stateless-connect + export protocol helper for reposix backends."
readme = "../../README.md"
keywords = ["git", "remote-helper", "agent", "rest", "partial-clone"]
categories = ["development-tools", "command-line-utilities"]

# D91-03: expose `backend_dispatch` as a library so `reposix-cli`'s
# attach/sync subcommands reuse the one URL→connector factory (with its
# OP-3 `.with_audit(…)` wiring) instead of hand-rolling a third/fourth copy.
[lib]
name = "reposix_remote"
path = "src/lib.rs"

[[bin]]
name = "git-remote-reposix"
path = "src/main.rs"

# The release pipeline (.github/workflows/release.yml) ships ONE combined
# archive per target — `reposix-v<version>-<target>.tar.gz` — that contains
# BOTH `reposix` and `git-remote-reposix` under a `reposix-v<version>-<target>/`
# directory. The archive stem uses the product name `reposix` (not the package
# name `reposix-remote`), so the default `{ name }-{ target }` template 404'd.
# bin-dir uses `{ bin }` so binstall picks `git-remote-reposix` out of the
# shared archive. Extension is hardcoded because assets are `.tar.gz`, which
# binstall's `{ archive-format }` renders as `tgz`.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/reposix-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "reposix-v{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/reposix-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[features]
# Gated integration tests that shell out to a real `git` binary.
# Requires git >= 2.27 (for protocol-v2 filter support). Off by default
# because the dev host's git is 2.25.1 and the tests assert behaviour
# under git clone --filter=blob:none.
integration-git = []

[dependencies]
reposix-core.workspace = true
reposix-cache = { path = "../reposix-cache", version = "0.13.0" }
# Phase 36-followup (helper backend dispatch): the helper instantiates
# concrete backend connectors based on the remote URL's scheme, so it
# pulls every backend adapter crate. Pre-Phase-36 the helper hardcoded
# `SimBackend` and these deps were CLI-only.
reposix-github = { path = "../reposix-github", version = "0.13.0" }
reposix-confluence = { path = "../reposix-confluence", version = "0.13.0" }
reposix-jira = { path = "../reposix-jira", version = "0.13.0" }
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
gix = { workspace = true }
chrono = { workspace = true }
# QL-005: the helper wires the backend-mutation `audit_events` DB into the
# Confluence/JIRA connectors (OP-3). `open_audit_db` returns a
# `rusqlite::Connection`; the connectors' `with_audit` takes a
# `parking_lot::Mutex`-wrapped handle.
rusqlite = { workspace = true, features = ["bundled"] }
parking_lot = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
tempfile = "3"
tokio = { workspace = true }
chrono = { workspace = true }
# Fork B unit test (P94) hand-rolls a BackendConnector to drive execute_action's
# delete-NotFound reclassification directly (execute_action is pub(crate), so it
# is unreachable from integration tests). Workspace-managed; used by every other
# connector crate.
async-trait = { workspace = true }
# v0.11.x coverage closure: the stateless_connect e2e test drives the
# helper binary through a real protocol-v2 turn, which requires a live
# sim on a random port. Programmatic library API only — no extra binary.
reposix-sim = { path = "../reposix-sim", version = "0.13.0" }
walkdir = "2.5.0"
regex = "1.12.3"
