[package]
name = "reposix-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "In-process REST API simulator with rate limits, conflicts, and workflow rules"

[lib]
path = "src/lib.rs"

[[bin]]
name = "reposix-sim"
path = "src/main.rs"

[dependencies]
reposix-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
governor.workspace = true
rusqlite.workspace = true

[dev-dependencies]
reqwest.workspace = true
