[package]
name = "reposix-sim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "In-process axum-based simulator of an issue-tracker REST API for reposix testing."
readme = "../../README.md"
keywords = ["simulator", "rest", "axum", "agent", "testing"]
categories = ["development-tools::testing", "simulation"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "reposix-sim"
path = "src/main.rs"

[dependencies]
reposix-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
governor.workspace = true
rusqlite.workspace = true
sha2 = "0.11"
hex = { workspace = true }

[dev-dependencies]
reqwest.workspace = true
tempfile = "3"
