[package]
name = "reposix-swarm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Multi-agent contention/swarm test harness for reposix."
readme = "../../README.md"
keywords = ["swarm", "agent", "testing", "load-test", "reposix"]
categories = ["development-tools::testing", "simulation"]
# Internal test harness — do not publish to crates.io. The release-binaries
# plan and dist workspace metadata exclude this crate from the 5-platform
# pipeline; release-plz will skip it on automated publishes.
publish = false

[[bin]]
name = "reposix-swarm"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
reposix-core.workspace = true
reposix-confluence = { path = "../reposix-confluence", version = "0.11.0" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
hdrhistogram = "7"
rand = "0.9"
async-trait.workspace = true
chrono.workspace = true

[dev-dependencies]
reposix-sim = { path = "../reposix-sim" }
reposix-confluence = { path = "../reposix-confluence" }
reposix-core.workspace = true
reqwest.workspace = true
tempfile = "3"
wiremock = "0.6"
